# who-knew-it

./: .gitignore  .pre-commit-config.yaml  config.yaml  nouns.csv  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_animal_questions.py  test_arxiv_question.py  test_generate_saying.py  test_movie_suggestion.py  test_podcast_question.py  test_pokemon_question.py  test_split_text.py  test_sport_nicknames.py  test_word_definition_question.py
who_knew_it/: animal_question.py  answers.py  api_call.py  arxiv_question.py  authenticator.py  fake_answer.py  movie_suggestion.py  name_generation.py  nickname_question.py  podcast_question.py  pokemon_question.py  questions.py  random_word.py  saying_generation.py  streamlit_app.py  word_definition_question.py
who_knew_it/animals/: Amphibians.csv  Birds.csv  Fresh-Water-Fish.csv  Mammals.csv  Reptiles.csv  Salt-Water-Fish.csv
who_knew_it/dictionary/: generate_csv.py  nouns.csv  old-english-nouns.txt
who_knew_it/name-generation/: big-related-words.txt  wet-related-words.txt
who_knew_it/nicknames/: american-football.csv  american-football.txt  basketball.csv  basketball.txt  boxing.csv  boxing.txt  convert_nicknames.py  cricket.csv  cricket.txt  cycling.csv  cycling.txt
who_knew_it/pokemon/: pokemon.csv
who_knew_it/prompts/: film_suggestion.txt  film_synopsis.txt  funny_animal.txt  funny_headline.txt
